[package]
name = "wando"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"

[dependencies.windows]
version = "0.48.0"
features = [
    "System",
    "Foundation",
    "Foundation_Collections",
    "Storage",
    "Storage_FileProperties",
    "Storage_Search",
    "Storage_Streams",
    "Media",
    "Media_Core",
    "Media_Playback",
    "UI_Notifications",
    "UI_Notifications_Management",
    "Data_Xml_Dom",
    "Devices_Geolocation"
]
